# cod-doc

./: .env.example  .gitignore  Dockerfile  MASTER.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  session-log.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/agents/: logical-commits.agent.md
arch/arch/: architecture.md
cod_doc/: __init__.py  cli.py  config.py  logging_config.py
cod_doc/agent/: orchestrator.py  prompts.py  retry.py  tool_defs.py  tools.py
cod_doc/api/: deps.py  routes.py  schemas.py  server.py  webhooks.py
cod_doc/api/web/: __init__.py  db_resolver.py  pages.py  templates_env.py
cod_doc/cli/: __init__.py  __main__.py  cmd_agent.py  cmd_hash.py  cmd_project.py  cmd_serve.py  cmd_tui.py
cod_doc/core/: context.py  hash_calc.py  project.py  reindex.py
cod_doc/domain/: __init__.py  entities.py
cod_doc/infra/: __init__.py  db.py  models.py
cod_doc/infra/migrations/: env.py
cod_doc/infra/migrations/versions/: 20260419_0001_core.py  20260425_0002_tasks.py  20260425_0003_stories.py  20260425_0004_revisions.py  20260425_0005_links_tags.py  20260425_0006_views_and_defaults.py
cod_doc/infra/repositories/: __init__.py  base.py  document_repo.py  project_repo.py  task_repo.py
cod_doc/mcp/: __init__.py  server.py
cod_doc/services/: __init__.py  doc_service.py  revision_service.py  task_service.py
cod_doc/static/: app.css
cod_doc/templates/: MASTER.md.j2
cod_doc/templates/web/: base.html  index.html
cod_doc/templates/web/project/: doc_show.html  docs_list.html  show.html
cod_doc/tui/: app.py  cod_doc.tcss
cod_doc/tui/screens/: agent_run.py  dashboard.py  wizard.py
docs/: cod-doc-guide.md  mcp-integration.md
docs/system/: ARCHITECTURE.md  DATA_MODEL.md  MASTER.md  VISION.md
docs/system/audit/: 2026-04-19-initial-audit.md  2026-04-25-section-a-data-core.md  2026-04-25-section-b-services.md
docs/system/capabilities/: agents-and-skills.md  audit-and-ci.md  auto-linking.md  context-retrieval.md  decisions-and-questions.md  doc-evolution.md  plan-management.md  project-bootstrap.md  task-creation.md  user-stories-graph.md  web-frontend.md
docs/system/migration/: from-restate.md
docs/system/roadmap/: audit-followups-task-plan.md  cod-doc-task-plan.md  web-frontend-task-plan.md
docs/system/standards/: document-link.md  frontmatter.md  revision-history.md  sensitive-data.md  task-plan.md
hooks/: install.sh  post-merge  pre-commit
scripts/: install_hooks.sh
scripts/hooks/: post-merge  pre-commit
specs/specs/: modules.md
templates/: MASTER.md.j2
tests/: test_context.py  test_hash_calc.py  test_integration.py  test_mcp.py  test_orchestrator.py  test_project.py
tests/api/: conftest.py  test_web_docs.py  test_web_scaffold.py
tests/infra/: test_audit_followups.py  test_db_smoke.py  test_revisions_migration.py  test_stories_migration.py  test_tags_migration.py  test_tasks_migration.py
tests/services/: test_doc_service.py  test_revision_service.py  test_task_service.py
tools/: get_context.py  hash_calc.py  reindex.py
