[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cod-doc"
version = "1.0.0"
description = "Context Orchestrator for Documentation — autonomous multi-project documentation agent"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "textual>=0.80.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0",
    "rich>=13.7",
    "click>=8.1",
    "gitpython>=3.1",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
cod-doc = "cod_doc.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cod_doc*"]

[tool.setuptools.package-data]
"cod_doc" = ["tui/*.tcss"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
