[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cod-doc"
version = "1.1.0"
description = "Context Orchestrator for Documentation — autonomous multi-project documentation agent"
readme = "docs/cod-doc-guide.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Typing :: Typed",
]
dependencies = [
    "openai>=1.50.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "textual>=0.80.0",
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0",
    "rich>=13.7",
    "click>=8.1",
    "gitpython>=3.1",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "python-ulid>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.scripts]
cod-doc = "cod_doc.cli:main"
cod-doc-mcp = "cod_doc.mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cod_doc*"]

[tool.setuptools.package-data]
"cod_doc" = ["tui/*.tcss", "templates/*.j2", "py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "TCH",  # type-checking imports
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["cod_doc"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
